style/style_valve.css
body {
    font-family: Arial, sans-serif;
    background: #494449 url(blackboard.png) no-repeat fixed;
    background-size: cover;
}

a:link, a:active, a:visited, a:hover {
    color: #fff;
}

#content {
    text-align: center;
}

#logo {
    font-family: "Arial Narrow", Arial, sans-serif;
    font-weight: bold;
    font-size: 35px;

    letter-spacing: 10px;
    text-align: center;
    text-transform: uppercase;
    color: #eee;

    display: inline-block;
    padding: 0 10px 0 2px;
    margin: 10px auto;
    border: #eee solid 4px;

    line-height: 34px;

    /* A hack to be able to select the last letter */
    unicode-bidi: bidi-override;
    direction: rtl;
}

/* TODO: In firefox the size of the #logo doesnt recompute to fit the text, fix it */
#logo:first-letter {
    font-size: 61%;
    vertical-align: top;
    line-height: 24px; /* A hack to align the last letter with the rest */
}

.headerText {
    margin: 20px 5px;
    color: #333;
    text-shadow: 1px 1px #777, -1px -1px #222;
    font-size: 30px;
}

.headerText a {
    color: #333;
}

/* Content */
.box {
    background: #1b2838;
    border: #000 solid 2px;
    border-radius: 5px;
    padding: 10px 20px;
    clear: both;
    text-align: left;
    background: radial-gradient(farthest-corner at 50% 10%,
    rgba(81, 243, 95, 0.2),
    rgb(0, 0, 0)),
    url("use_your_illusion.png") center;
}

h1, h2 {
    margin: 5px;
    text-align: center;
    font-size: 26px;
    font-family: Arial, sans-serif;
    font-weight: bold;
}

h1 {
    color: #2694e7;
    text-shadow: 1px 1px #15355e;
}

h2 {
    color: #60ab3c;
    text-shadow: 1px 1px #315e23;
}

ul.rules {
    margin-left: 25px;
    font-size: 18px;
    list-style: none;
    color: #eee;
    vertical-align: text-top;
}

.rules li {
    margin: 0;
    padding: 0 0 1px 28px;
    vertical-align: middle;
}

.links {
    text-align: center;
    clear: both;
}

.warning {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    font-size: 40px;
}

.tooltip:hover span {
    border: 2px solid #FFF;
    color: #EEE;
    background: #333 linear-gradient(#222, #444) repeat-x 0 0;
    opacity: 0.9;
}

